# SwitchGame

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
config/: __init__.py  aligment.py
scripts/: collision.py  event.py  exceptions.py  group.py  image.py  loop.py  math.py  shape.py  sprites.py
src/: __init__.py
src/image_types/: __init__.py  animation.py  image.py
src/image_types/editors/: animation_editor.py  image_editor.py
src/loaders/: tileset_loader.py
src/scripts/: collision.py  group.py  loop.py  math.py
src/shapes/: __init__.py  collision_rectangle_shape.py  rectangle_shape.py
src/sprites/: __init__.py  animated_sprite.py  static_sprite.py
